 o Dropped support for the LPRT ftp command
 o Gopher is now officially abandoned as a protocol (lib)curl tries to support
 o curl_global_init() and curl_global_cleanup() are now using a refcount so
   that it is now legal to call them multiple times. See updated info for
   details

This release includes the following bugfixes:

 o improved GnuTLS check in configure
 o re-used FTP connections when the second request didn't do a transfer
 o plain --limit-rate [num] means bytes
 o re-creating a dead connection is no longer counted internally as a followed
   redirect and thus prevents a weird error that would occur if a FTP
   connection died on an attempted re-use
 o Try PASV after failing to connect to the port the EPSV response contained
 o -P [IP] with non-local address with ipv6-enabled curl
 o -P [hostname] with ipv6-disabled curl
 o libcurl.m4 was updated
 o configure no longer warns if the current path contains a space
 o test suite kill race condition
 o FTP_SKIP_PASV_IP and FTP_USE_EPSV when doing FTP over HTTP proxy
 o Doing a second request with FTP on the same bath path, would make libcurl
   confuse what current working directory it had
 o FTP over HTTP proxy now sends the second CONNECT properly
 o numerous compiler warnings and build quirks for various compilers have
   been addressed
 o supports name and passwords up to 255 bytes long, embedded in URLs
 o the HTTP_ONLY define disables the TFTP support

Other curl-related news since the previous public release:

 o http://curlm.haxx.se/ is new service that automatically redirects you to a
   curl web mirror that is close to you!

 o http://curl.hkmirror.org/ is a new curl web mirror in Hong Kong
 o http://curl.storemypix.com/ is a new curl web mirror in Germany
 o http://curl.s-lines.net/ is a new curl web mirror in Japan
 o http://curl.oss-mirror.org/ is a new curl web mirror in Ireland
 o http://curl.linux-mirror.org/ is a new curl web mirror in Germany