@@ -21,6 +21,7 @@ This release includes the following changes:
 
 This release includes the following bugfixes:
 
+ o cached DNS entries could remain in the cache too long
  o improved GnuTLS check in configure
  o re-used FTP connections when the second request didn't do a transfer
  o plain --limit-rate [num] means bytes
@@ -62,6 +63,6 @@ advice from friends like these:
  Dov Murik, Jean Jacques Drouin, Andres Garcia, Yang Tse, Gisle Vanem, Dan
  Fandrich, Alexander Lazic, Michael Jahn, Andrew Benham, Bryan Henderson,
  David Shaw, Jon Turner, Duane Cathey, Michal Marek, Philippe Vaucher, Kent
- Boortz, Karl M
+ Boortz, Karl Moerder, Shmulik Regev
  
         Thanks! (and sorry if I forgot to mention someone)
